--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         <p>
                             The Official Website of our college's Mechanical Department student association. Frontend done using Html,Css and Javascript
                         </p>
-                        <a href="https://fitness-freaks.github.io/test1/">View Project</a>
+                        <a href="https://mesafcrit.in/">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
