--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div id="lead-content">
             <h1>Trevor Aaron Robert D'Costa</h1>
             <h2>Computer Engineer and Cyber Security Enthusiast</h2>
-            <a href="Trevor DCosta Resume.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="Trevor Dcosta Resume .pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
