--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <div id="lead">
       <div id="lead-content">
         <h1>Trevor Aaron Robert D'Costa</h1>
-        <h2>Computer Engineer and Cyber Security Enthusiast</h2>
-        <a href="Trevor_Dcosta_Resume_Latex.pdf" class="btn-rounded-white"
+        <h2>Computer Engineer skilled in Product Management and Tech Strategy</h2>
+        <a href="Trevor_Dcosta_Resume_LJuly_2025.pdf" class="btn-rounded-white"
           >Download Resume</a
         >
       </div>
@@ -89,10 +89,15 @@
           </div>
           <div class="col-md-8">
             <p>
-              A Final Year Computer Engineering Student willing to take up new
-              challenges, learn new things, and climb up the success ladder in
-              the organization. I am also interested in Cyber Security and
-              Blockchain.
+              I am a Software Engineer (BA4) at Barclays with expertise in Storage Systems, Risk Management, and Automation. I thrive on solving complex technical problems with a business-first mindset, managing projects that reduce downtime, optimize workflows, and drive measurable impact.
+             <br/>Currently, I seek to transition into Product Management or Tech Strategy roles where I can leverage my technical foundation, stakeholder management, and data-driven approach to build solutions aligned with user needs and business goals.<br/>
+             <br/>Key Highlights:<br/><br/>
+• Automated storage monitoring solutions reducing downtime by 30%<br/>
+• Spearheaded data handling process automation saving 30+ hours/week<br/>
+• Collaborated cross-functionally to launch new project monitoring portals<br/>
+• Strong knowledge of Product Management, Automation, Cloud, and Risk frameworks with a focus on scalable architecture<br/><br/>
+
+Let’s connect if you are looking for a Product Manager or Tech Strategist with a proven ability to align technology with business outcomes.
             </p>
           </div>
         </div>
@@ -103,14 +108,34 @@
     <div id="experience" class="background-alt">
       <h2 class="heading">Experience</h2>
       <div id="experience-timeline">
-        <div data-date="June 2022 – Present">
+        <div data-date="July 2023 – Present">
+          <h3>Barclays</h3>
+          <h4>Software Engineer (BA4)</h4>
+          <p>
+            • Promoted to BA4 grade within 20 months in recognition of outstanding performance and significant contributions to team projects.<br/>
+            • Developed an advanced alerting system for storage arrays, improving issue detection and reducing response time by 48%.<br/>
+            • Implemented observability solutions, automating anomaly detection and system monitoring, which increased operational efficiency leading to a 30% reduction in downtime.<br/>
+            • Have been leading a team of 4 in multiple Data Center Recovery activities related to SAN Storage right from planning to final execution stage and have received multiple recognitions for Precision in operations and risk management.<br/>
+            • Have been developing work plans, schedules, resource planning & allocation, and progress updates & reports for each break-fix activities with multiple cross functional and dependent teams. <br/>
+            • Always ensured compliance with quality standards and implemented improvements where required and achieved deliverable targets always before time for which I have also received multiple recognitions.<br/>
+            • Have been involved in training new joiners in our team and also providing Knowledge Transfer sessions for the team  <br/>
+          </p><br/>
+          <h4>Graduate Analyst (BA3)</h4>
+          <p>
+            • Automated data handling for production storage, reducing manual work by 30 hours per week and improving data accuracy by 38%.<br/>
+            • Developed dashboards and reporting systems to analyze storage performance, increasing efficiency in issue resolution.<br/>
+            • Automated switch-port remediation for Brocade and Cisco, streamlining checks, reporting, and communication.<br/>
+            • Solved more than 150 problems related to storage with more than 90% accuracy and also worked in more than 200 Change activities.<br/>
+            • Worked in projects leveraging ITSM processes for incident, change, and problem management while adopting Agile methodologies to ensure iterative delivery and continuous improvement.<br/>
+          </p>
+        </div>
+        <div data-date="June 2022 – March 2023">
           <h3>Zedex Info Pvt. Ltd.</h3>
           <h4>Full Stack Developer Intern</h4>
           <p>
-            Developing a management system where employees will be able to
-            submit their work and their team leader can allot review their work
-            from it. Collaborating with the Senior Developer and UI/UX team to
-            work on this project.
+            • Developed an SEO-driven Content Management System to track employee performance, improving reporting efficiency by 60%.<br/>
+            • Designed database schema and APIs for data visualization, enabling better managerial insights.<br/>
+            • Participated in daily stand-ups to provide progress updates, track sprint objectives, and enhance team communication, ensuring on-time feature delivery.<br/>
           </p>
         </div>
       </div>
@@ -121,9 +146,9 @@
       <h2 class="heading">Education</h2>
       <div class="education-block">
         <h3>Fr C. Rodrigues Institute of Technology(University of Mumbai)</h3>
-        <span class="education-date">August 2019 - Present</span>
+        <span class="education-date">August 2019 - May 2023</span>
         <h4>Bachelor of Engineeing in Computer Engineeing</h4>
-        <p>C.G.P.A : 9.38/10</p>
+        <p>C.G.P.A : 9.22/10</p>
         <p>
           Activities and societies: - Vice President Of CSI-FCRIT Computer
           Branch.<br />
@@ -143,7 +168,9 @@
           CSC501 - Theoretical Computer Science<br />
           CSC503 - Computer Network<br />
           CSC601 - System Programming & Compiler Construction<br />
-          CSC602 - Cryptography & System Security<br /><br />
+          CSC602 - Cryptography & System Security<br />
+          CSC701 - Machine Learning<br/>
+          CSC702 - Big Data Analytics<br /><br/>
 
           Semester wise Grade:-<br />
           Sem 1: 8.17/10 <br />
@@ -152,12 +179,14 @@
           Sem 4: 10/10<br />
           Sem 5: 9.61/10<br />
           Sem 6: 9.22/10<br />
-          Total CGPA:- 9.38/10<br /><br />
+          Sem 7: 8.36/10<br />
+          Sem 8: 9.10/10<br />
+          Total CGPA:- 9.22/10<br /><br />
 
           Honors & Recognition:<br />
           Second Prize in Hack-It-Out Etamax-2021 ( Hackathon at FCRIT)<br />
-          Top 100 in Gov-TechThon 2020 ( Hackathon held by IEEE, ORACLE and
-          NIC)<br />
+          Top 100 in Gov-TechThon 2020 ( Hackathon held by IEEE, ORACLE and NIC)<br />
+          Certificate of Appreciation at IEI-NMLC FCRIT awards.<br/>
         </p>
       </div>
       <!-- End .education-block -->
@@ -247,23 +276,47 @@
 
     <div id="skills">
       <h2 class="heading">Skills</h2>
+      <h4 class="heading">Skills and Processes</h4>
       <ul>
-        <li>C</li>
-        <li>C++</li>
-        <li>Java</li>
+        <li>Product Management</li>
+        <li>Business Analysis</li>
+        <li>Stakeholder Management</li>
+        <li>Vendor Management</li>
+        <li>Product Management</li>
+        <li>Risk Management</li>
+        <li>Agile Methodologies</li>
+        <li>CI/CD</li>
+        <li>ITSM processes</li>
+      </ul><br/>
+      <h4 class="heading"> Soft Skills </h4>
+      <ul>
+        <li>Problem Solving</li>
+        <li>Leadership</li>
+        <li>Communication</li>
+        <li>Critical Reasoning</li>
+        <li>Stress Management</li>
+        <li>Time-Management</li>
+      </ul><br/>
+      <h4 class="heading">Frameworks and Tools</h4>
+      <ul><br/>
+        <li>Python</li>
+        <li>SQL</li>
+        <li>MongoDB</li>
         <li>JavaScript</li>
-        <li>Html</li>
-        <li>ReactJS</li>
-        <li>NextJS</li>
-        <li>MySQL</li>
-        <li>Canva</li>
-      </ul>
+      </ul><br/>
+      <h4 class="heading">Programming and Databases</h4>
+      <ul>
+        <li>Python</li>
+        <li>SQL</li>
+        <li>MongoDB</li>
+        <li>JavaScript</li>
+      </ul><br/>
     </div>
     <!-- End #skills -->
 
     <div id="contact">
       <h2>Get in Touch</h2>
-      <h2>Email:dcostat4@gmail.com</h2>
+      <h2>Email:tardcosta4@gmail.com</h2>
       <h2>Phone:9326663284</h2>
     </div>
     <!-- End #contact -->
@@ -272,7 +325,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-5 copyright">
-            <p>Copyright &copy; 2022 Trevor Dcosta</p>
+            <!-- <p>Copyright &copy; 2022 Trevor Dcosta</p> -->
           </div>
           <div class="col-sm-2 top">
             <span id="to-top">
@@ -286,27 +339,27 @@
                   ><i class="fa fa-github" aria-hidden="true"></i
                 ></a>
               </li>
-              <li>
+              <!-- <li>
                 <a
                   href="https://www.instagram.com/trevor_da_costa04/"
                   target="_blank"
                   ><i class="fa fa-instagram" aria-hidden="true"></i
                 ></a>
-              </li>
+              </li> -->
               <li>
                 <a
-                  href="https://www.linkedin.com/in/trevor-aaron-robert-dcosta-7558631a6/"
+                  href="https://www.linkedin.com/in/trevordco/"
                   target="_blank"
                   ><i class="fa fa-linkedin" aria-hidden="true"></i
                 ></a>
               </li>
-              <li>
+              <!-- <li>
                 <a
                   href="https://www.facebook.com/profile.php?id=100008708833907"
                   target="_blank"
                   ><i class="fa fa-facebook" aria-hidden="true"></i
                 ></a>
-              </li>
+              </li> -->
               <li>
                 <a href="https://twitter.com/TrevorDcosta04" target="_blank"
                   ><i class="fa fa-twitter" aria-hidden="true"></i
