--- a/index.html
+++ b/index.html
@@ -62,15 +62,14 @@
 
     <div id="lead">
       <div id="lead-content">
-        <h1>Trevor Aaron Robert D'Costa</h1>
-        <h2>Computer Engineer skilled in Product Management and Tech Strategy</h2>
-        <a href="Trevor_Dcosta_Resume_July_2025.pdf" class="btn-rounded-white"
+        <h1>Hi I'm Trevor D'Costa</h1>
+        <h2 style="color:white;">Computer Engineer skilled in Product Management and Tech Strategy</h2>
+        <br/>
+        <a href="Trevor_Dcosta_Resume_LJuly_2025.pdf" class="btn-rounded-white"
           >Download Resume</a
         >
       </div>
       <!-- End #lead-content -->
-
-      <div id="lead-overlay"></div>
 
       <div id="lead-down">
         <span>
@@ -85,19 +84,23 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <h2 class="heading">About Me</h2>
+            <h2 class="heading">About Me</h2><br/>
+            <img src="trevor.jpeg" width="250" height="300">
           </div>
           <div class="col-md-8">
+            <br/> <br/> <br/>
             <p>
-              I am a Software Engineer (BA4) at Barclays with expertise in Storage Systems, Risk Management, and Automation. I thrive on solving complex technical problems with a business-first mindset, managing projects that reduce downtime, optimize workflows, and drive measurable impact.
-             <br/>Currently, I seek to transition into Product Management or Tech Strategy roles where I can leverage my technical foundation, stakeholder management, and data-driven approach to build solutions aligned with user needs and business goals.<br/>
-             <br/>Key Highlights:<br/><br/>
-• Automated storage monitoring solutions reducing downtime by 30%<br/>
-• Spearheaded data handling process automation saving 30+ hours/week<br/>
-• Collaborated cross-functionally to launch new project monitoring portals<br/>
-• Strong knowledge of Product Management, Automation, Cloud, and Risk frameworks with a focus on scalable architecture<br/><br/>
-
-Let’s connect if you are looking for a Product Manager or Tech Strategist with a proven ability to align technology with business outcomes.
+            I’m a passionate Product Manager, currently working as Software Engineer (BA4) at Barclays, who loves building solutions that connect people, technology, 
+            and data to solve meaningful problems and make everyday life simpler and better.<br/><br/>
+            With a background in software engineering, risk management, and business analysis, 
+            I’ve developed a strong understanding of user behaviours, business needs, 
+            and what it takes to create products that drive impact and delight users. 
+            This perspective helps me scope, prioritise, and deliver solutions that not only address current challenges 
+            but also anticipate future opportunities.<br/><br/>
+            I am a Goan, which makes me naturally a football lover – both an avid fan and someone who loves playing the game. Other than that outside of work, you’ll find me exploring new cafes and restaurants, reading about history, facts, business strategies, etc.
+            or planning my next travel adventure. 
+            I also enjoy new challenges, meaningful conversations, 
+            and finding ways to support and empower those around me. Want to connect? Feel free to reach out at <a href="tardcosta4@gmail.com">tardcosta4@gmail.com</a>! 
             </p>
           </div>
         </div>
@@ -109,7 +112,9 @@ Let’s connect if you are looking for a Product Manager or Tech Strategist with
       <h2 class="heading">Experience</h2>
       <div id="experience-timeline">
         <div data-date="July 2023 – Present">
-          <h3>Barclays</h3>
+          <div style="display: flex; justify-content: space-between; align-items: center;"><h3>Barclays</h3>
+          <img src="barclays.png" width="50" size="60" float="left">
+          </div>
           <h4>Software Engineer (BA4)</h4>
           <p>
             • Promoted to BA4 grade within 20 months in recognition of outstanding performance and significant contributions to team projects.<br/>
@@ -130,7 +135,9 @@ Let’s connect if you are looking for a Product Manager or Tech Strategist with
           </p>
         </div>
         <div data-date="June 2022 – March 2023">
-          <h3>Zedex Info Pvt. Ltd.</h3>
+          <div style="display: flex; justify-content: space-between; align-items: center;"><h3>Zedex Info Pvt. Ltd.</h3>
+          <img src="zedex.jpg" width="50" size="60" float="left">
+          </div>
           <h4>Full Stack Developer Intern</h4>
           <p>
             • Developed an SEO-driven Content Management System to track employee performance, improving reporting efficiency by 60%.<br/>
@@ -142,21 +149,23 @@ Let’s connect if you are looking for a Product Manager or Tech Strategist with
     </div>
     <!-- End #experience -->
 
-    <div id="education">
+    <!-- <div id="education">
       <h2 class="heading">Education</h2>
       <div class="education-block">
         <h3>Fr C. Rodrigues Institute of Technology(University of Mumbai)</h3>
         <span class="education-date">August 2019 - May 2023</span>
         <h4>Bachelor of Engineeing in Computer Engineeing</h4>
         <p>C.G.P.A : 9.22/10</p>
+        <p>Percentage: 81.30%</p>
         <p>
-          Activities and societies: - Vice President Of CSI-FCRIT Computer
+          Activities and societies: - <br />
+          - Vice President Of CSI-FCRIT Computer
           Branch.<br />
           - Editorial Head of Manthan-FCRIT (College Magazine).<br />
           - Web Developer For College Events and Departments such as
           MESA-FCRIT,FACES-2021, etc.<br />
-          - Organizing Committee Member Of ETAMAX-2020.<br /><br />
-
+          - Organizing Committee Member Of ETAMAX-2020.<br /><br /> -->
+<!-- 
           Relevant Coursework:<br />
           CSC303 - Data Structures<br />
           CSL304 - Skill Base Lab Course: Object Oriented Programming with
@@ -186,10 +195,9 @@ Let’s connect if you are looking for a Product Manager or Tech Strategist with
           Honors & Recognition:<br />
           Second Prize in Hack-It-Out Etamax-2021 ( Hackathon at FCRIT)<br />
           Top 100 in Gov-TechThon 2020 ( Hackathon held by IEEE, ORACLE and NIC)<br />
-          Certificate of Appreciation at IEI-NMLC FCRIT awards.<br/>
-        </p>
+          Certificate of Appreciation at IEI-NMLC FCRIT awards.<br/> -->
+        <!-- </p>
       </div>
-      <!-- End .education-block -->
       <div class="education-block">
         <h3>
           Fr Agnel Multipurpose School and Jr. College (Maharashtra State Board)
@@ -198,24 +206,24 @@ Let’s connect if you are looking for a Product Manager or Tech Strategist with
         <h4>HSC</h4>
         <p>Percentage: 76.15%</p>
         <p>
-          Stream : Science <br />
-          Subjects: Physics, Chemistry, Mathematics, English and Computer
-          Science (C++ and 8085 Microprocessor)<br />
-          ( Scored highest marks in Engilsh in the Jr. College)
+          Stream : Science  -->
+          <!-- Subjects: Physics, Chemistry, Mathematics, English and Computer
+          Science (C++ and 8085 Microprocessor)<br /> -->
+          <!-- ( Scored highest marks in Engilsh in the Jr. College)
         </p>
       </div>
       <div class="education-block">
         <h3>Fatima High School (Maharashtra State Board)</h3>
         <span class="education-date">July 2007 - March 2017</span>
         <h4>SSC</h4>
-        <p>Percentage: 82.80%</p>
-        <p>
+        <p>Percentage: 82.80%</p> -->
+        <!-- <p>
           Subjects: Mathematics, Science, History and Political Science,
           Geography and Economics, English, Hindi and Marathi
-        </p>
-      </div>
+        </p> -->
+      <!-- </div> -->
       <!-- End .education-block -->
-    </div>
+    <!-- </div> -->
     <!-- End #education -->
 
     <div id="projects" class="background-alt">
@@ -275,7 +283,6 @@ Let’s connect if you are looking for a Product Manager or Tech Strategist with
     <!-- End #projects -->
 
     <div id="skills">
-      <h2 class="heading">Skills</h2>
       <h4 class="heading">Skills and Processes</h4>
       <ul>
         <li>Product Management</li>
@@ -298,11 +305,17 @@ Let’s connect if you are looking for a Product Manager or Tech Strategist with
         <li>Time-Management</li>
       </ul><br/>
       <h4 class="heading">Frameworks and Tools</h4>
-      <ul><br/>
-        <li>Python</li>
-        <li>SQL</li>
-        <li>MongoDB</li>
-        <li>JavaScript</li>
+      <ul>
+        <li>Excel</li>
+        <li>Jira</li>
+        <li>Confluence</li>
+        <li>Bitbucket</li>
+        <li>Git</li>
+        <li> PowerBI</li>
+        <li>Kafka</li>
+        <li>Figma</li>
+        <li>SecureCRT</li>
+        <li>Unix</li>
       </ul><br/>
       <h4 class="heading">Programming and Databases</h4>
       <ul>
